/*
 * Copyright 2024 Sowers, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option go_package = "bosca.io/api/protobuf/profiles";

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "empty.proto";
import "requests.proto";

package bosca.profiles;

service ProfilesService {
  rpc GetConfiguration(bosca.Empty) returns (ProfileConfiguration) {
    option (google.api.http) = {
      get: "/v1/profiles/configuration"
    };
  }
  rpc GetMyProfile (bosca.Empty) returns (Profile) {
    option (google.api.http) = {
      get: "/v1/profiles/my"
    };
  }
  rpc GetProfileAttributeTypes(bosca.IdsRequest) returns (ProfileAttributeTypes) {
    option (google.api.http) = {
      get: "/v1/profiles/attribute/types"
    };
  }
}

message ProfileConfiguration {
  string avatar_template_url = 1;
}

enum ProfileVisibility {
  system = 0;
  user = 1;
  friends = 2;
  friends_of_friends = 3;
  public = 4;
}

message Profile {
  string id = 1;
  string principal_id = 2;
  string name = 3;
  repeated ProfileAttribute attributes = 4;
  ProfileVisibility visibility = 5;
  google.protobuf.Timestamp created = 6;
}

message ProfileAttributeType {
  string id = 1;
  string name = 2;
  string description = 3;
}

message ProfileAttributeTypes {
  repeated ProfileAttributeType types = 1;
}

message ProfileAttribute {
  string id = 1;
  string type_id = 2;
  ProfileVisibility visibility = 4;
  google.protobuf.Any value = 5;
  float confidence = 6;
  float priority = 7;
  string source = 8;
  google.protobuf.Timestamp created = 9;
  google.protobuf.Timestamp expiration = 10;
}